fleetman/istio-components.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1
metadata:
  namespace: default
  name: fleetman-staff-service
spec:
  host: fleetman-staff-service.default.svc.cluster.local
  subsets:
  - name: safe
    labels:
      version: safe
  - name: risky
    labels:
      version: risky
  trafficPolicy: ~

---

kind: VirtualService
apiVersion: networking.istio.io/v1
metadata:
  namespace: default
  name: fleetman-staff-service
spec:
  http:
  - route:
    - destination:
        host: fleetman-staff-service.default.svc.cluster.local
        subset: safe
      weight: 0
    - destination:
        host: fleetman-staff-service.default.svc.cluster.local
        subset: risky
      weight: 100
  hosts:
  - fleetman-staff-service.default.svc.cluster.local
